@@ -5,7 +5,6 @@ nobase_pkginclude_HEADERS = Exceptions.hh         \
                             NewWave.hh            \
                             PixelArray.hh         \
                             PixelDefinition.hh    \
-                            RasterisedEvent.hh    \
                             Utils.hh              \
                             WaveletCoefficient.hh \
                             WaveletEngine.hh      \
